<resources>
    <string name="app_name">MeteoCleta</string>
    <string name="etEmail">Enter your Email</string>
    <string name="etPassword">Enter your password</string>
    <string name="btnLogin">Log In</string>
    <string name="btnSignup">Sign Up</string>
    <string name="etName">Enter your name</string>
    <string name="etSurname">Enter your surname</string>
    <string name="etRol">Write your rol Student/Employee</string>
    <string name="etDate">Click to choose your birthdate</string>
    <string name="reset_description">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="send">Send</string>
    <string name="forgot">Forgot your password?</string>
    <string name="title_activity_clima">MeteoCleta</string>
    <string name="title_home">Home</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="new_pass">Enter your new password(optional)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">Update profile</string>
    <string name="route_map_to_college">Route map to college, tap mark to create route!</string>
    <string name="convert_temperature_from_celsius_to_fahrenheit">Convert temperature from Cº to Fahrenheit             </string>
    <string name="change_velocity">Convert velocity of wind from m/s to km/h            </string>
    <string name="log_out">Log Out</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_lenguage">Change lenguage</string>
</resources>
